--- a/3rd_experiment/EE_Measurement/.gitignore
+++ b/3rd_experiment/EE_Measurement/.gitignore
@@ -95,7 +95,7 @@ dkms.conf
 # *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+# .pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
